// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeatureInformation should match snapshot. should display multiple features with pagination 1`] = `
<div class="wkp-feature-information"
     aria-labelledby="wkp-popup-label"
     aria-describedby="wkp-popup-desc"
     role="dialog"
>
  <div class="wkp-feature-information-header">
    <span id="wkp-popup-label">
    </span>
    <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1go4m0m-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
            title="Schliessen"
    >
      <svg stroke="currentColor"
           fill="currentColor"
           stroke-width="0"
           viewbox="0 0 24 24"
           focusable="false"
           alt="Schliessen"
           height="1em"
           width="1em"
           xmlns="http://www.w3.org/2000/svg"
      >
        <path fill="none"
              d="M0 0h24v24H0z"
        >
        </path>
        <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
        </path>
      </svg>
      <span class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root">
      </span>
    </button>
  </div>
  <div class="wkp-feature-information-body">
    <div class="wkp-netzkarte-popup">
      <div tabindex="0"
           role="button"
           aria-expanded="false"
           class="wkp-coordinate-toggle"
      >
        Koordinaten
      </div>
      <div class="wkp-coordinates-infos wkp-closed">
        <span class="wkp-projection-label">
        </span>
        <span>
          Länge (X): 2
        </span>
        <span>
          Breite (Y): 2
        </span>
      </div>
    </div>
    <div class="wkp-pagination-wrapper">
      <span class="wkp-pagination-button-wrapper">
      </span>
      1 von 4
      <span class="wkp-pagination-button-wrapper">
        <a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways wkp-pagination-button css-1xylxj1-MuiTypography-root-MuiLink-root"
           title="weiter"
           tabindex="0"
        >
          <svg stroke="currentColor"
               fill="currentColor"
               stroke-width="0"
               viewbox="0 0 512 512"
               height="1em"
               width="1em"
               xmlns="http://www.w3.org/2000/svg"
          >
            <path d="M295.6 163.7c-5.1 5-5.1 13.3-.1 18.4l60.8 60.9H124.9c-7.1 0-12.9 5.8-12.9 13s5.8 13 12.9 13h231.3l-60.8 60.9c-5 5.1-4.9 13.3.1 18.4 5.1 5 13.2 5 18.3-.1l82.4-83c1.1-1.2 2-2.5 2.7-4.1.7-1.6 1-3.3 1-5 0-3.4-1.3-6.6-3.7-9.1l-82.4-83c-4.9-5.2-13.1-5.3-18.2-.3z">
            </path>
          </svg>
        </a>
      </span>
    </div>
  </div>
</div>
`;

exports[`FeatureInformation should match snapshot. should not display header 1`] = `
<div class="wkp-feature-information"
     aria-labelledby="wkp-popup-label"
     aria-describedby="wkp-popup-desc"
     role="dialog"
>
  <div class="wkp-feature-information-body">
    <div class="makeStyles-root-1">
      <div>
        DfA Linien Nr.: undefined
      </div>
      <div>
        Kilometer: NaN
      </div>
    </div>
  </div>
</div>
`;

exports[`FeatureInformation should match snapshot. using the info's popupComponent 1`] = `
<div class="wkp-feature-information"
     aria-labelledby="wkp-popup-label"
     aria-describedby="wkp-popup-desc"
     role="dialog"
>
  <div class="wkp-feature-information-header">
    <span id="wkp-popup-label">
    </span>
    <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1go4m0m-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
            title="Schliessen"
    >
      <svg stroke="currentColor"
           fill="currentColor"
           stroke-width="0"
           viewbox="0 0 24 24"
           focusable="false"
           alt="Schliessen"
           height="1em"
           width="1em"
           xmlns="http://www.w3.org/2000/svg"
      >
        <path fill="none"
              d="M0 0h24v24H0z"
        >
        </path>
        <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
        </path>
      </svg>
      <span class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root">
      </span>
    </button>
  </div>
  <div class="wkp-feature-information-body">
    <div class="wkp-netzkarte-popup">
      <div tabindex="0"
           role="button"
           aria-expanded="false"
           class="wkp-coordinate-toggle"
      >
        Koordinaten
      </div>
      <div class="wkp-coordinates-infos wkp-closed">
        <span class="wkp-projection-label">
        </span>
        <span>
          Länge (X): 2
        </span>
        <span>
          Breite (Y): 2
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`FeatureInformation should match snapshot. using the layers's popupComponent 1`] = `
<div class="wkp-feature-information"
     aria-labelledby="wkp-popup-label"
     aria-describedby="wkp-popup-desc"
     role="dialog"
>
  <div class="wkp-feature-information-header">
    <span id="wkp-popup-label">
    </span>
    <button class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium css-1go4m0m-MuiButtonBase-root-MuiIconButton-root"
            tabindex="0"
            type="button"
            title="Schliessen"
    >
      <svg stroke="currentColor"
           fill="currentColor"
           stroke-width="0"
           viewbox="0 0 24 24"
           focusable="false"
           alt="Schliessen"
           height="1em"
           width="1em"
           xmlns="http://www.w3.org/2000/svg"
      >
        <path fill="none"
              d="M0 0h24v24H0z"
        >
        </path>
        <path d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z">
        </path>
      </svg>
      <span class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root">
      </span>
    </button>
  </div>
  <div class="wkp-feature-information-body">
    <div class="wkp-netzkarte-popup">
      <div tabindex="0"
           role="button"
           aria-expanded="false"
           class="wkp-coordinate-toggle"
      >
        Koordinaten
      </div>
      <div class="wkp-coordinates-infos wkp-closed">
        <span class="wkp-projection-label">
        </span>
        <span>
          Länge (X): 2
        </span>
        <span>
          Breite (Y): 2
        </span>
      </div>
    </div>
  </div>
</div>
`;
